--- a/cf_template-1.1.1/index.html
+++ b/cf_template-1.1.1/index.html
@@ -29,7 +29,7 @@
     <div class="jumbotron">
       <div class="container"><center> <!-- It looked weird aligned to the left so I googled how to center html texts and was pretty straight forward :)  -->
         <h1>The Web Developer Challenge!</h1>
-        <p>During the next three months, Rafael is going to challenge his limits and push his brain capabilities to the limit in order to find out if he has what it takes to become a developer. <br/><br/> Will he be able to pull it off?</p>
+        <p>During the next three months, Rafael is going to challenge his limits and push his brain capabilities in order to find out if he has what it takes to become a developer. <br/><br/> Will he be able to pull it off?</p>
         <h3><a href="https://www.careerfoundry.com" target="_blank"> Follow his Career Foundry journey!</a></h3></center>
           
 
@@ -87,20 +87,18 @@
        </div><!-- /col -->
         <div class="col-md-4">
           <h2>Course Goals</h2>
-          <p>Rafael's ultimate goal is to test if he has what it needs to become a programmer.<br/> This is a career change with three specific reasons behind it: 
+          <p>Rafael's ultimate goal is to test if he has what it needs to become a programmer.<br/> This is a career change with three specific goals behind it.</p>
+          <p> <strong>Goals:</strong></p>
           <ol>
-          <li>Rafael would like to have the ability to work from any city or location in the world and not being location dependant for his career.</li>
+          <li>Rafael would like to have the ability to work from any place in the world and not being location dependant for his career.</li>
           <li>Rafael would like to be able to work in meaningful products that could help make a possitive difference in the world.</li>
-          <li>Rafael would like to be able to prototype his own products.</p></li>
+          <li>Rafael would like to be able to prototype his own products.</li>
+          </ol>
 
           <!-- NOTE: I've decided to hide this button since made more sense as a call of action under the main text. -->
           <!-- <p><a class="btn btn-default" href="https://careerfoundry.com" target="_blank" role="button">Join his journey! &raquo;</a></p> -->
         </div><!-- /col -->
       </div><!-- /row -->
-
-      <hr>
-
-
     </div> <!-- /container -->
 
 
