--- a/cf_template-1.1.5/about.html
+++ b/cf_template-1.1.5/about.html
@@ -11,19 +11,19 @@
 
 </head>
 <body>
-<nav> <!--Creating the nav bar-->
-  <div class="topnav" id="myTopnav">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-</div>
-</nav><!--closing the nav bar-->
+
+  <nav> <!--Creating the nav bar-->
+    <div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+  </nav> <!--closing the nav bar-->
 
   <div class="container">
     <div class="header">
     	<h1>About Us</h1>
-    	<a href="index.html">BACK</a>
 	</div> <!-- end header -->
 	<div class="image column">
 		<img src="img/me.png" alt="Placeholder picture" >
