--- a/cf_template-1.1.5/about.html
+++ b/cf_template-1.1.5/about.html
@@ -7,7 +7,7 @@
 <!-- Normalising browsers CSS -->
 <link rel="stylesheet" href="css/normalize.css">
 <!-- Link to my css -->
-<link rel="stylesheet" href="css/about_styles.css">
+<link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
