--- a/cf_template-1.1.5/about.html
+++ b/cf_template-1.1.5/about.html
@@ -3,9 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Me</title>
+<title>About Us</title>
 <!-- Normalising browsers CSS -->
 <link rel="stylesheet" href="css/normalize.css">
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <!-- Link to my css -->
 <link rel="stylesheet" href="css/styles.css">
 
@@ -15,9 +17,9 @@
   <nav> <!--Creating the nav bar-->
     <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="#news">About Us</a>
+    <a href="#contact">Our Work</a>
+    <a href="#about">Contact</a>
   </div>
   </nav> <!--closing the nav bar-->
 
