--- a/cf_template-1.1.5/index.html
+++ b/cf_template-1.1.5/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Project Nova</title>
-  
-
-
+<title>Weekend Studios</title>
+<!-- Normalising browsers CSS -->
+<link rel="stylesheet" href="css/normalize.css">
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <!-- Link to my css -->
@@ -26,13 +25,22 @@
 
   <body>
 
-    <div class="jumbotron"> <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="container">
-        <h1>Weekend Studios</h1>
-        <p>Think outside the box to stay ahead of an oversaturated market.</p>
-        <a href="about.html">About Us</a>
-      </div><!-- /container -->
-    </div><!-- /jumbotron -->
+  <nav> <!--Creating the nav bar-->
+    <div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="#contact">Our Work</a>
+    <a href="#about">Contact</a>
+  </div>
+  </nav> <!--closing the nav bar-->
+
+  <div class="jumbotron"> <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="container">
+      <h1>Weekend Studios</h1>
+      <p>Think outside the box to stay ahead of an oversaturated market.</p>
+      <a href="about.html">About Us</a>
+    </div><!-- /container -->
+  </div><!-- /jumbotron -->
 
 
 
