--- a/cf_template-1.1.5/about.html
+++ b/cf_template-1.1.5/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Us</title>
+<title>About</title>
 <!-- Normalising browsers CSS -->
 <link rel="stylesheet" href="css/normalize.css">
 <!-- Bootstrap core CSS -->
@@ -17,40 +17,26 @@
   <nav> <!--Creating the nav bar-->
     <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="#news">About Us</a>
-    <a href="#contact">Our Work</a>
+    <a href="#news">About</a>
+    <a href="#contact">Work</a>
     <a href="#about">Contact</a>
   </div>
   </nav> <!--closing the nav bar-->
 
   <div class="container">
     <div class="header">
-    	<h1>About Us</h1>
+    	<h1>[ currentYear -- ]</h1>
 	</div> <!-- end header -->
 	<div class="image column">
 		<img src="img/me.png" alt="Placeholder picture" >
 	</div> <!-- end image -->
     <div class="intro column">
-      <h3>Intro</h3>
-      <p>Where Everyday Is Weekend!</p>
+      <h3>Previously on... 'Life'</h3>
+      <p>Product Lead, Lead Designer, Game Designer, Level Designer, Lead QA, Senior QA, QA tester...</p>
    </div> <!-- end intro  -->
-   <div class="skill column">
-     <h3> Our Skills</h3>
-       <ul id="skill-list">
-         <li>True Social Games</li>
-         <li>Intuitive UX</li>
-         <li>Casual Games</li>
-         <li> Monetisation</li>
-         <li>Full Stack Web Development</li>
-         <li>Gamification</li>
-         <li>Product Vision</li>
-     </ul><!-- end unordered list -->
+   
    </div> <!-- end skill -->
-   <div class="main-text"> 
-     <h4>Meaningful Social Connections Through Our Games</h4>
-   	 <p>Weekend is the time to relax, meet new people and catch up with old family and friends.<br/> At Weekend Studios our goal is to bring you those feelings of joy, every day, through our games.<br/>We are extremely passionate about developing innovative games to create great moments of joy.
-   	 </p>
-   </div> <!--end main text-->
+   
   </div> <!-- end container -->
 </body>
 </html>
