--- a/cf_template-1.1.5/index.html
+++ b/cf_template-1.1.5/index.html
@@ -38,7 +38,7 @@
     <div class="container">
       <h1>Weekend Studios</h1>
       <p>Think outside the box to stay ahead of an oversaturated market.</p>
-      <a href="about.html">About Us</a>
+      <a href="about.html">Our Work</a>
     </div><!-- /container -->
   </div><!-- /jumbotron -->
 
