--- a/cf_template-1.1.5/about.html
+++ b/cf_template-1.1.5/about.html
@@ -39,6 +39,9 @@
        <div class="column">
         <img src="img/about/jkwink.png" alt="Placeholder picture" >
       </div> <!-- end column -->
+      <div class="header">
+        <h1>[ currentYear -- ]</h1>
+      </div> <!-- end header -->
     </div> <!-- end container for columns -->
     </div> <!-- end container -->
     <div class="container">
