First draft completed
- All three pages are working
- All content is displayed correctly
- All links are connected
NOTE: missing refactoring and code cleanup

--- a/cf_template-1.1.5/about.html
+++ b/cf_template-1.1.5/about.html
@@ -17,9 +17,8 @@
   <nav> <!--Creating the nav bar-->
     <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="#news">About</a>
-    <a href="#contact">Work</a>
-    <a href="#about">Contact</a>
+    <a href="#work">Work</a>
+    <a href="contact.html">Contact</a>
   </div>
   </nav> <!--closing the nav bar-->
  
