--- a/cf_template-1.1.5/about.html
+++ b/cf_template-1.1.5/about.html
@@ -31,7 +31,7 @@
       <div class="column">
         <h3>Connecti Cards</h3>
         <h6>Product Lead</h6>
-        <p>Become a CLOSED BETA tester!<br/> Design and proof of concept. User testing. Team setup and execution.</p>
+        <p>Become a <a href="#">CLOSED BETA</a> tester!<br/> Design and proof of concept. User testing. Team setup and execution.</p>
       </div> <!-- end column  -->
       <div class="column">
         <img src="img/about/jkwink.png" alt="Placeholder picture" >
@@ -91,7 +91,8 @@
         <img src="img/about/gobMonst.png" alt="Placeholder picture" >
       </div> <!-- end column -->
     </div> <!-- end container for columns -->
-    
+    </div>
+    </div>
     <footer>
       <div class="copyright">
         <p>Images Copyright Owned by Weekend Studios, Wooga, EA and Steroid Interactive.</p>
