--- a/cf_template-1.1.5/contact.html
+++ b/cf_template-1.1.5/contact.html
@@ -30,6 +30,7 @@
     <div class="col-md-8">
       <h1 id="contact-h1">Who are you gonna call?</h1>
       <a id="whitelink" href="#">notarealmail@notevenfake.com</a>
+      <p id="tellink"> TEL - +00 000-000-001</p>
     </div><!-- /col-->
   </body>
 </html>
