--- a/cf_template-1.1.5/contact.html
+++ b/cf_template-1.1.5/contact.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Link to my css -->
     <link rel="stylesheet" href="css/styles.css">
-
   </head>
 
   <body>
@@ -25,7 +24,7 @@
     </div>
     </nav> <!--closing the nav bar-->
      <!-- Sets up a big background image -->
-    <img src="envelope.png" id="bg" alt="envelope">
+    <img src="img/contact/envelope.png" id="bg" alt="envelope">
     <!-- Sets up the big text -->
     <div class="col-md-8">
       <h1 id="contact-h1">Who are you gonna call?</h1>
