--- a/cf_template-1.1.7/bootstrapp debugging.html
+++ b/cf_template-1.1.7/bootstrapp debugging.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  <!-- document created only for testing purposes this can be deleted before the next submission since was just created for sanity sake when working on the accordeon debugging. -->
 <!DOCTYPE html>
 <html>
 <head>
