--- a/cf_template-1.1.7/index.html
+++ b/cf_template-1.1.7/index.html
@@ -15,17 +15,18 @@
   </head>
 
   <body>
-    <nav> <!--Creating the nav bar-->
-      <div class="topnav" id="myTopnav">
-      <a href="index.html">Home</a>
-      <a href="about.html">Work</a>
-      <a href="contact.html">Contact</a>
-    </div>
-    </nav> <!--closing the nav bar-->
+    <div class="nav"><!--Creating the nav bar-->
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="about.html">Work</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+      </ul>
+    </div> <!--closing the nav bar-->
 
     <div class="jumbotron"> <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="container">
-        <h1 id="contact-h1">Novakun Designs</h1>
+        <h1 id="hero-h1">Novakun Designs</h1>
         <a href="about.html">Previous Work</a>
       </div><!-- /container -->
     </div><!-- /jumbotron -->
