--- a/cf_template-1.1.8/index.html
+++ b/cf_template-1.1.8/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>home</title>
+    <link rel="stylesheet" href="css/normalize.css">
         <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Link to my css -->
@@ -23,6 +24,7 @@
     </div> <!--closing the nav bar-->
 
 <!-- starting with image carousel for hero images -->
+
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -64,7 +66,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>  <!-- end carousel controls section -->
-    
+  
 
    
 
