--- a/cf_template-1.1.8/about.html
+++ b/cf_template-1.1.8/about.html
@@ -16,6 +16,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Work</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="faq.html">FAQ</a></li>
       </ul>
     </div> <!--closing the nav bar-->
     <div class="container">
