--- a/cf_website_project_1/index.html
+++ b/cf_website_project_1/index.html
@@ -25,7 +25,6 @@
 
 <!-- starting with image carousel for hero images -->
 
-
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -70,26 +69,28 @@
 
    
 
-    <div class="container-mission"><!-- Lets add  an explanation to why 'we' do what 'we' do -->
-      <div class="mission-statement">
-        <h1> Connecting people in unique ways</h1>
-        <p>Weekend Studios was founded in 2017 by two game industry veterans who wanted to double down on meaningful social experiences for the casual market.<br/>With over twenty years of  combined experience in free to play, freemium and AAA games, we have forged strong career paths working on multiple platforms and game genres. Our solid know how, application of best practices, focus and love for what we do is the recipe for creating great games.</p>
-      </div> <!-- closing up mission-statement -->
+    <div class="container-mission" id="mission-statement"><!-- Lets add  an explanation to why 'we' do what 'we' do -->
+      <div class="row" >
+        <div class="col-md-12" >
+          <h1> Connecting people in unique ways</h1>
+          <p>Weekend Studios was founded in 2017 by two game industry veterans who wanted to double down on meaningful social experiences for the casual market.<br/>With over twenty years of  combined experience in free to play, freemium and AAA games, we have forged strong career paths working on multiple platforms and game genres. Our solid know how, application of best practices, focus and love for what we do is the recipe for creating great games.</p>
+        </div> <!-- closing up mission-statement -->
+      </div> <!-- closing row -->
     </div> <!--closing up the explanation mission container-->
 
-    <div class="container"> <!--creating the body columns for portfolio, goals & available time-->
+    <div class="container" id="container-mission"> <!--creating the body columns for portfolio, goals & available time-->
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <img src="img/home/responsive.png" alt="squares">
             <h2>Responsive UX</h2>
             <p>You might be skeptic since almost nothing on this website is responsive... but it shall be one day. All good things take their time.</p>
           </div><!-- /col -->
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <img src="img/home/heart.png" alt="heart">
             <h2>Vision Driven</h2>
             <p>Ultimative is all about the Product Vision and the Product Vision is all about the target audience. We don't design our apps but our customers do. They just don't know about it.</p>
           </div><!-- /col -->
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <img src="img/home/pet.png" alt="pet paw">
             <h2>Animal Friendly</h2>
             <p>Our designs are SO user friendly that even your cat will be happy to spend hours playing with our reactive menus.</p>
