--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -49,12 +49,12 @@
 
    <div class="container" id="home"> 
     <div class="row"> 
-    <div class="col-xs-12" >
+    <div class="col-xs-12 col-sm-7 col-md-6" >
       <img src="img/home/Appicon-Round-Big.png" id="game-icon" alt="game_icon">
       </div><!-- closing column for main-image -->
-      <div class="col-xs-12" id="main-title-mob">
+      <div class="col-xs-12 col-sm-5 col-md-5" id="main-title-mob">
         <h1>Connecti Cards</h1>
-        <h3> Simple yet surprisingly addictive.</h3>
+        <h4> Simple yet surprisingly addictive.</h4>
         <button type="button" class="btn btn-primary">Become A Tester!</button>
       </div> <!-- closing column for main title -->
     </div> <!-- closing row for main title -->
@@ -64,10 +64,10 @@
 
     <div class="container" id="about"> 
     <div class="row"> 
-    <div class="col-xs-12" >
+    <div class="col-xs-12 col-sm-6 col-sm-push-6  col-md-5 col-md-push-7" >
       <img src="img/about/jkwink.png" id="about-img" alt="game_icon">
       </div><!-- closing column for main-image -->
-      <div class="col-xs-12" id="main-title-mob">
+      <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-7 col-md-pull-5" id="main-title-mob">
         <h1>About</h1>
         <p> Connecti Cards™ combines classic card games rules on a 5x5 grid. Players will take turns to create their best moves using the cards on the board. Once the board is full the game is over and the player with the highest score wins. Connecti Cards™ doubles down on meaningful social experiences and provides a fun, new way of playing casual card games to reconnect with old friends and family or meet new people.</p>
       </div> <!-- closing column for main title -->
