--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -83,11 +83,11 @@
       <div class="col-xs-12" >
         <h1>Press Kit!</h1>
         </div><!-- closing column for press kit title -->
-      <div class="col-xs-6" >
+      <div class="col-xs-6 col-sm-4" >
         <img src="img/about/jk.png" id="about-img" alt="game_icon">
         </div><!-- closing column for main-image -->
-      <div class="col-xs-6" id="main-title-mob">
-        <h3>Download our Press Kit here!</h3>
+      <div class="col-xs-6 col-sm-8" id="main-title-mob">
+        <h4>Download our Press Kit here!</h4>
         <button type="button" class="btn btn-primary">Press Kit</button>
       </div> <!-- closing column for main title -->
     </div> <!-- closing row for main title -->
@@ -97,7 +97,7 @@
 
 <!-- ************* START CAROUSEL  *************** -->
 
-<div class="container" id="carousel"> 
+<div class="col-xs-12 hidden-sm hidden-md hidden-lg" id="carousel"> 
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -140,7 +140,26 @@
 </div> <!-- closing carousel area -->
 </div>
 <!-- ************* END CAROUSEL  *************** -->
+<!-- *********START CAROUSEL DISPLAY FOR NON MOB ************ -->
 
+  <div class="container" id="store-assets">
+    <div class="row">
+      <div class="hidden-xs col-sm-12">
+      <h1> Soon available in your favorite store!</h1>
+      </div><!-- clossing title column -->
+      <div class="hidden-xs col-sm-4">
+        <img src="img/carousel/play-anytime.jpg" alt="mobile1">
+      </div> <!-- closing col 4 -->
+      <div class="hidden-xs col-sm-4">
+      <img src="img/carousel/powerful-combos.jpg" alt="mobile2">
+      </div> <!-- closing col 4 -->
+      <div class="hidden-xs col-sm-4">
+      <img src="img/carousel/connect-with-friends.jpg" alt="mobile3">
+      </div> <!-- closing col 4 -->
+    </div> <!-- closing row -->
+  </div><!-- closing container for store assets -->
+
+<!-- *********END CAROUSEL DISPLAY FOR NON MOB ************ -->
 
 
      <!-- ************* START JK Quotes  *************** -->
