--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -34,10 +34,11 @@
         <!-- Content for navbar-->
           <div class="collapse navbar-collapse">
             <ul class="navbar-right nav navbar-nav">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#press-kit">Press Kit</a></li>
+              <li><a href="#nav-home">Home</a></li>
+              <li><a href="#nav-about">About</a></li>
+              <li><a href="#nav-store">Store</a></li>
               <li><a href="#jk-quotes">J.Jokes</a></li>
+              <li><a href="#press-kit">Press Kit</a></li>
             </ul>
           </div><!-- closing the navbar-collapse -->
         </div> <!-- end container fluid -->
@@ -46,6 +47,7 @@
 <!-- ******************** END navbar area********************* -->
 
 <!-- starting home section -->
+<div id="nav-home"></div>
 
    <div class="container" id="home"> 
     <div class="row"> 
@@ -60,6 +62,7 @@
     </div> <!-- closing row for main title -->
 
     <!-- ************* END HOME *************** -->
+    <div id="nav-about"></div>
     <!-- ************* START ABOUT  *************** -->
 
     <div class="container" id="about"> 
@@ -75,26 +78,7 @@
 
 </div><!-- closing about container -->
 <!-- ************* END ABOUT  *************** -->
-
-  <!-- ************* START PRESS-KIT  *************** -->
-
-  <div class="container" id="press-kit"> 
-    <div class="row"> 
-      <div class="col-xs-12" >
-        <h1>Press Kit!</h1>
-        </div><!-- closing column for press kit title -->
-      <div class="col-xs-6 col-sm-4" >
-        <img src="img/about/jk.png" id="about-img" alt="game_icon">
-        </div><!-- closing column for main-image -->
-      <div class="col-xs-6 col-sm-8" id="main-title-mob">
-        <h4>Download our Press Kit here!</h4>
-        <button type="button" class="btn btn-primary">Press Kit</button>
-      </div> <!-- closing column for main title -->
-    </div> <!-- closing row for main title -->
-  </div> <!-- closing container for press kit -->
-
-<!-- ************* END PRESS-KIT  *************** -->
-
+<div id="nav-store"></div>
 <!-- ************* START CAROUSEL  *************** -->
 
 <div class="col-xs-12 hidden-sm hidden-md hidden-lg" id="carousel"> 
@@ -164,21 +148,21 @@
 
      <!-- ************* START JK Quotes  *************** -->
 <div class="container" id="jk-quotes"> 
-  <div class="row" id="questions-container">
-    <div class="col-xs-12" >
-      <h1 id="jk-h1"> J.Jack Jokes</h1>
-    </div><!--  closing col 12 for title -->
-    <div class="col-xs-4">
+  <div class="row" >
+    <div class="col-xs-12 col-sm-12">
+      <h1 id="jk-h1"> J.Jack Jokes</h1> 
+    </div><!--  closing col 12 -->
+    <div class="col-xs-4 col-sm-3">
       <img src="img/about/jkwink.png" id="jk-img" alt="game_icon">
       <button class="btn-primary" id="jk-btn" onclick="newQuote()"> New Quote </button>
     </div><!--  closing col 4 for title -->
-    <div class="col-xs-8" id="jk-p">
-     <div class="bubble" id="quoteDisplay" ></div>
+    <div class="col-xs-8 col-sm-9" id="quoteDisplay">
+     <!-- <div class="bubble" id="quoteDisplay" >------</div> -->
     </div> <!-- clsoing col 8 for quote display -->
     
   </div> <!-- closing row for jk quotes -->
       
-</div> <!-- closing FAQ id container -->
+</div> <!-- closing JK  container -->
 
 
 
