--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -38,7 +38,7 @@
               <li><a href="#nav-about">About</a></li>
               <li><a href="#nav-store">Store</a></li>
               <li><a href="#jk-quotes">J.Jokes</a></li>
-              <li><a href="#press-kit">Press Kit</a></li>
+              <li><a href="#">Press Kit</a></li>
             </ul>
           </div><!-- closing the navbar-collapse -->
         </div> <!-- end container fluid -->
@@ -152,12 +152,14 @@
     <div class="col-xs-12 col-sm-12">
       <h1 id="jk-h1"> J.Jack Jokes</h1> 
     </div><!--  closing col 12 -->
-    <div class="col-xs-4 col-sm-3">
+    <div class="col-xs-3 col-sm-3">
       <img src="img/about/jkwink.png" id="jk-img" alt="game_icon">
       <button class="btn-primary" id="jk-btn" onclick="newQuote()"> New Quote </button>
     </div><!--  closing col 4 for title -->
-    <div class="col-xs-8 col-sm-9" id="quoteDisplay">
-     <!-- <div class="bubble" id="quoteDisplay" >------</div> -->
+    <div class="col-xs-5 col-sm-5">
+    <div class="bubble" id="quoteDisplay">
+  <!--   here inside will pop the random quotes -->
+  </div>
     </div> <!-- clsoing col 8 for quote display -->
     
   </div> <!-- closing row for jk quotes -->
