--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Link to my css -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- setting up the flavicon for the page -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/cc-flavicon.png" />
   </head>
 
   <body data-spy="scroll" data-target=".navbar">
@@ -149,14 +151,14 @@
      <!-- ************* START JK Quotes  *************** -->
 <div class="container" id="jk-quotes"> 
   <div class="row" >
-    <div class="col-xs-12 col-sm-12">
+    <div class="col-xs-12">
       <h1 id="jk-h1"> J.Jack Jokes</h1> 
     </div><!--  closing col 12 -->
-    <div class="col-xs-3 col-sm-3">
+    <div class="col-xs-3">
       <img src="img/about/jkwink.png" id="jk-img" alt="game_icon">
       <button class="btn-primary" id="jk-btn" onclick="newQuote()"> New Quote </button>
     </div><!--  closing col 4 for title -->
-    <div class="col-xs-5 col-sm-5">
+    <div class="col-xs-5">
     <div class="bubble" id="quoteDisplay">
   <!--   here inside will pop the random quotes -->
   </div>
