--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -39,8 +39,8 @@
               <li><a href="#nav-home">Home</a></li>
               <li><a href="#nav-about">About</a></li>
               <li><a href="#nav-store">Store</a></li>
-              <li><a href="#jk-quotes">J.Jokes</a></li>
-              <li><a href="#">Press Kit</a></li>
+              <li class="hidden-sm hidden-md hidden-lg""><a href="#jk-quotes">J.Jokes</a></li>
+              <li><a href="https://www.dropbox.com/sh/mciwzz511w7jx0o/AACQPeF_SNJcjeM2RHu6gOHSa?dl=0" target="_blank">Press Kit</a></li>
             </ul>
           </div><!-- closing the navbar-collapse -->
         </div> <!-- end container fluid -->
@@ -151,14 +151,14 @@
      <!-- ************* START JK Quotes  *************** -->
 <div class="container" id="jk-quotes"> 
   <div class="row" >
-    <div class="col-xs-12">
+    <div class="col-xs-12 hidden-sm hidden-md hidden-lg"">
       <h1 id="jk-h1"> J.Jack Jokes</h1> 
     </div><!--  closing col 12 -->
-    <div class="col-xs-3">
+    <div class="col-xs-3 hidden-sm hidden-md hidden-lg"">
       <img src="img/about/jkwink.png" id="jk-img" alt="game_icon">
       <button class="btn-primary" id="jk-btn" onclick="newQuote()"> New Quote </button>
     </div><!--  closing col 4 for title -->
-    <div class="col-xs-8">
+    <div class="col-xs-8 hidden-sm hidden-md hidden-lg"">
     <div class="bubble" id="quoteDisplay">
   <!--   here inside will pop the random quotes -->
   </div>
