--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -40,6 +40,7 @@
               <li><a href="#nav-about">About</a></li>
               <li><a href="#nav-store">Store</a></li>
               <li class="hidden-sm hidden-md hidden-lg""><a href="#jk-quotes">J.Jokes</a></li>
+              <li><a href="#contact">Contact</a></li>
               <li><a href="https://www.dropbox.com/sh/mciwzz511w7jx0o/AACQPeF_SNJcjeM2RHu6gOHSa?dl=0" target="_blank">Press Kit</a></li>
             </ul>
           </div><!-- closing the navbar-collapse -->
@@ -172,7 +173,44 @@
 
 <!-- ************* END JK Quotes  *************** -->
 
+<!-- ********* START CONTACT ************ -->
 
+  <div class="container" id="contact">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12">
+      <h1> Say hello!</h1>
+      </div><!-- clossing title column -->
+      <div class="col-xs-12 col-sm-12">
+        <img class="img-circle" src="img/contact/mail.png" alt="email icon">
+      </div> <!-- closing col 4 -->
+      <div class="col-xs-12 col-sm-12">
+        <p>We are always happy to answer your questions or reading your feedback to help us make a better game experience.</p>
+      </div><!-- closing col   -->
+       <div class="col-xs-12 col-sm-12">
+        <p>hello@connecti-cards.com</p>
+      </div><!-- closing col   -->
+    </div> <!-- closing row -->
+  </div><!-- closing container for store assets -->
+
+<!-- *********END CONTACT ************ -->
+<!-- ######################FOOTER################### -->
+<div class="container">
+  <div class="col-xs-12 col-sm-12" id="up-arrow">
+    <a href="#nav-home"><img src="img/contact/up.png" alt="up"></a>
+  </div>
+    <hr />
+        <div class="text-center center-block">
+            <p class="txt-railway">Copyright © 2017 Weekend Studios UG All rights reserved.</p>
+            <br />
+                <a href="https://www.facebook.com/bootsnipp"><i class="fa fa-facebook-square fa-3x social"></i></a>
+              <a href="https://twitter.com/bootsnipp"><i class="fa fa-twitter-square fa-3x social"></i></a>
+              <a href="https://plus.google.com/+Bootsnipp-page"><i class="fa fa-google-plus-square fa-3x social"></i></a>
+              <a href="mailto:bootsnipp@gmail.com"><i class="fa fa-envelope-square fa-3x social"></i></a>
+</div>
+    <hr />
+</div>
+
+<!-- ######################END FOOTER################### -->
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
