Twitter and FB links functional
- Functionality added to the social links
- Clean up the  footer bar

--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -208,15 +208,17 @@
 <footer>
     <div class="container">
         <div class="row vcenter">
-            <div class="pull-left col-lg-4 col-xs-12" id="copyright">
+            <div class="pull-left col-sm-4 col-xs-12" id="copyright">
                 <p>Copyright &copy;2017 Weekend Studios UG All rights reserved.</p>
             </div>
-            <div class="col-lg-4 col-lg-offset-4 col-xs-12" id="social">
-                <div class="pull-right">
-                    <a href="https://twitter.com/WeekendStweet" class="twitter-follow-button" data-show-count="false">Follow @WeekendStweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <div class="pull-right col-sm-4 col-xs-12 ">
+                <div class="twitter-button">
+                    <a href="https://twitter.com/WeekendStweet" class="twitter-follow-button" data-show-count="false">Follow @WeekendStweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+                    </div> <!-- closing col4 -->
+                <div class="pull-right col-sm-4 col-xs-12 " >
                    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
       
-                </div>
+                </div><!-- closing col -->
             </div>
         </div>
     </div>
