Created contact layout
- Layout and labels are in place

--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -196,6 +196,23 @@
        <div class="col-xs-12 col-sm-12">
         <p>hello@connecti-cards.com</p>
       </div><!-- closing col   -->
+     <!--  ####################FORM TEST################## -->
+      <form id="contact-area"> 
+        <label for="name">Name</label>
+        <div class="form-group">
+          <input class="form-control" type="text" placeholder="Your name">
+        </div>
+        <label for="email">Email</label>
+        <div class="form-group">
+          <input class="form-control" type="email" placeholder="Enter your email">
+        </div>
+        <label for="textarea">Text</label>
+        <div class="form-group">
+        <textarea style="resize:none" cols="40" rows="5" placeholder="Drop us a line!" class="message-box form-control"></textarea>
+        </div>
+      </form> <!-- closing form -->
+  <!--  ####################END FORM TEST################## -->
+
     </div> <!-- closing row -->
   </div><!-- closing container for store assets -->
 
