--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -18,8 +18,9 @@
 
   <body data-spy="scroll" data-target=".navbar">
 
-  <!-- ********************navbar area********************* -->
-
+<!-- ########################################## -->
+<!-- ************** START NAVBAR ************** -->
+<!-- ########################################## -->
    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"><!--Creating the nav bar-->
       <div class="container-fluid">
       <!-- Mobile display -->
@@ -47,16 +48,18 @@
           </div><!-- closing the navbar-collapse -->
         </div> <!-- end container fluid -->
     </nav> <!--closing the nav bar-->
+<!-- ########################################## -->
+<!-- *************** END NAVBAR *************** -->
+<!-- ########################################## -->
 
-<!-- ******************** END navbar area********************* -->
-
-<!-- starting home section -->
+<!-- ########################################## -->
+<!-- *************** START HOME *************** -->
+<!-- ########################################## -->
 <div id="nav-home"></div>
-
-   <div class="container" id="home"> 
+  <div class="container" id="home"> 
     <div class="row"> 
-    <div class="col-xs-12 col-sm-7 col-md-6" >
-      <img src="img/home/Appicon-Round-Big.png" id="game-icon" alt="game_icon">
+      <div class="col-xs-12 col-sm-7 col-md-6" >
+        <img src="img/home/Appicon-Round-Big.png" id="game-icon" alt="game_icon">
       </div><!-- closing column for main-image -->
       <div class="col-xs-12 col-sm-5 col-md-5" id="main-title-mob">
         <h1>Connecti Cards</h1>
@@ -64,31 +67,67 @@
         <button type="button" class="btn btn-primary">Become A Tester!</button>
       </div> <!-- closing column for main title -->
     </div> <!-- closing row for main title -->
+  </div> <!-- Closing container for home -->
+<!-- ########################################## -->
+<!-- ***************** END HOME *************** -->
+<!-- ########################################## -->
 
-    <!-- ************* END HOME *************** -->
-    <div id="nav-about"></div>
-    <!-- ************* START ABOUT  *************** -->
 
+<!-- ########################################## -->
+<!-- *************** START ABOUT **************** -->
+<!-- ########################################## -->
+
+  <div id="nav-about"></div>
     <div class="container" id="about"> 
-    <div class="row"> 
-    <div class="col-xs-12 col-sm-6 col-sm-push-6  col-md-5 col-md-push-7" >
-      <img src="img/about/jkwink.png" id="about-img" alt="game_icon">
-      </div><!-- closing column for main-image -->
+      <div class="row"> 
+        <div class="col-xs-12 col-sm-6 col-sm-push-6  col-md-5 col-md-push-7" >
+          <img src="img/about/jkwink.png" id="about-img" alt="game_icon">
+        </div><!-- closing column for main-image -->
       <div class="col-xs-12 col-sm-6 col-sm-pull-6 col-md-7 col-md-pull-5" id="main-title-mob">
         <h1>About</h1>
         <p> Connecti Cards™ combines classic card games rules on a 5x5 grid. Players will take turns to create their best moves using the cards on the board. Once the board is full the game is over and the player with the highest score wins. Connecti Cards™ doubles down on meaningful social experiences and provides a fun, new way of playing casual card games to reconnect with old friends and family or meet new people.</p>
       </div> <!-- closing column for main title -->
-      <!-- ######################PLACEHOLDER VIDEO################### -->
+      <!-- #################PLACEHOLDER VIDEO################ -->
       <div class="col-xs-12 col-sm-12" id="panda-vid">
-<iframe width="854" height="480" style="text-align: left;" src="https://www.youtube.com/embed/DSehQsYU9h4" frameborder="0" allowfullscreen></iframe>
-</div><!-- closing video div -->
-
-<!-- ######################END PLACEHOLDER VIDEO################### -->
+        <iframe width="854" height="480" style="text-align: left;" src="https://www.youtube.com/embed/DSehQsYU9h4" frameborder="0" allowfullscreen></iframe>
+      </div><!-- closing video div -->
+      <!-- #################END PLACEHOLDER VIDEO################ -->
     </div> <!-- closing row for main title -->
+  </div><!-- closing about container -->
 
-</div><!-- closing about container -->
-<!-- ************* END ABOUT  *************** -->
+<!-- ########################################## -->
+<!-- *************** END ABOUT **************** -->
+<!-- ########################################## -->
+
+
+<!-- ########################################## -->
+<!-- ******* START CAROUSEL & INFO STORE ****** -->
+<!-- ########################################## -->
+
 <div id="nav-store"></div>
+
+<!-- *********START CAROUSEL DISPLAY FOR NON MOB ************ -->
+
+  <div class="container" id="store-assets">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12">
+      <h1> Soon available in your favorite store!</h1>
+      </div><!-- clossing title column -->
+      <div class="hidden-xs col-sm-4">
+        <img src="img/carousel/play-anytime.jpg" alt="mobile1">
+      </div> <!-- closing col 4 -->
+      <div class="hidden-xs col-sm-4">
+      <img src="img/carousel/powerful-combos.jpg" alt="mobile2">
+      </div> <!-- closing col 4 -->
+      <div class="hidden-xs col-sm-4">
+      <img src="img/carousel/connect-with-friends.jpg" alt="mobile3">
+      </div> <!-- closing col 4 -->
+    </div> <!-- closing row -->
+  </div><!-- closing container for store assets -->
+
+<!-- *********END CAROUSEL DISPLAY FOR NON MOB ************ -->
+
+
 <!-- ************* START CAROUSEL  *************** -->
 
 <div class="col-xs-12 hidden-sm hidden-md hidden-lg" id="carousel"> 
@@ -134,29 +173,16 @@
 </div> <!-- closing carousel area -->
 </div>
 <!-- ************* END CAROUSEL  *************** -->
-<!-- *********START CAROUSEL DISPLAY FOR NON MOB ************ -->
 
-  <div class="container" id="store-assets">
-    <div class="row">
-      <div class="hidden-xs col-sm-12">
-      <h1> Soon available in your favorite store!</h1>
-      </div><!-- clossing title column -->
-      <div class="hidden-xs col-sm-4">
-        <img src="img/carousel/play-anytime.jpg" alt="mobile1">
-      </div> <!-- closing col 4 -->
-      <div class="hidden-xs col-sm-4">
-      <img src="img/carousel/powerful-combos.jpg" alt="mobile2">
-      </div> <!-- closing col 4 -->
-      <div class="hidden-xs col-sm-4">
-      <img src="img/carousel/connect-with-friends.jpg" alt="mobile3">
-      </div> <!-- closing col 4 -->
-    </div> <!-- closing row -->
-  </div><!-- closing container for store assets -->
-
-<!-- *********END CAROUSEL DISPLAY FOR NON MOB ************ -->
+<!-- ########################################## -->
+<!-- *************** END CAROUSEL *************** -->
+<!-- ########################################## -->
 
 
-     <!-- ************* START JK Quotes  *************** -->
+<!-- ########################################## -->
+<!-- ************* START JK QUOTES ************ -->
+<!-- ########################################## -->
+
 <div class="container" id="jk-quotes"> 
   <div class="row" >
     <div class="col-xs-12 hidden-sm hidden-md hidden-lg"">
@@ -176,48 +202,62 @@
       
 </div> <!-- closing JK  container -->
 
+<!-- ########################################## -->
+<!-- *************** END JK QUOTES ************ -->
+<!-- ########################################## -->
 
 
-<!-- ************* END JK Quotes  *************** -->
+<!-- ########################################## -->
+<!-- *************** START CONTACT ************ -->
+<!-- ########################################## -->
 
-<!-- ********* START CONTACT ************ -->
+<!-- ********* START CONTACT INFO ************ -->
 
   <div class="container" id="contact">
     <div class="row">
       <div class="col-xs-12 col-sm-12">
       <h1> Say hello!</h1>
       </div><!-- clossing title column -->
-      <div class="col-xs-12 col-sm-12">
+      <div class="col-xs-12 col-sm-6" id="contact-info" >
         <img class="img-circle" src="img/contact/mail.png" alt="email icon">
-      </div> <!-- closing col 4 -->
-      <div class="col-xs-12 col-sm-12">
         <p>We are always happy to answer your questions or reading your feedback to help us make a better game experience.</p>
-      </div><!-- closing col   -->
-       <div class="col-xs-12 col-sm-12">
         <p>hello@connecti-cards.com</p>
       </div><!-- closing col   -->
-     <!--  ####################FORM TEST################## -->
+
+<!--  ####END CONTACT INFO ##### -->
+
+     <!--  ############### START CONTACT FORM ############### -->
+     <div class="col-xs-12 col-sm-6">
       <form id="contact-area"> 
-        <label for="name">Name</label>
+        <label for="name">Name(*)</label>
         <div class="form-group">
-          <input class="form-control" type="text" placeholder="Your name">
+          <input class="form-control" type="text" placeholder="Your name" required="required">
         </div>
-        <label for="email">Email</label>
+        <label for="email">Email(*)</label>
         <div class="form-group">
-          <input class="form-control" type="email" placeholder="Enter your email">
+          <input class="form-control" type="email" placeholder="Enter your email" required="required">
         </div>
         <label for="textarea">Text</label>
         <div class="form-group">
         <textarea style="resize:none" cols="40" rows="5" placeholder="Drop us a line!" class="message-box form-control"></textarea>
         </div>
+        <p id="contact-footnote">(*) Required attributes</p>
+        <button type="button" class="btn btn-info">Submit</button>
       </form> <!-- closing form -->
-  <!--  ####################END FORM TEST################## -->
+    </div> <!-- closing the col for the contact area -->
+  <!--  #################### END CONTACT FORM ################## -->
 
     </div> <!-- closing row -->
   </div><!-- closing container for store assets -->
 
-<!-- *********END CONTACT ************ -->
-<!-- ######################FOOTER################### -->
+<!-- ########################################## -->
+<!-- ****************END CONTACT ************** -->
+<!-- ########################################## -->
+
+<!-- ########################################## -->
+<!-- ************** START FOOTER ************** -->
+<!-- ########################################## -->
+
 <div class="container">
   <div class="col-xs-12 col-sm-12" id="up-arrow">
     <a href="#nav-home"><img src="img/contact/up.png" alt="up"></a>
@@ -240,9 +280,14 @@
         </div>
     </div>
 </footer>
+<!-- ########################################## -->
+<!-- ************** END FOOTER *************** -->
+<!-- ########################################## -->
 
 
-<!-- ######################END FOOTER################### -->
+<!-- ##########################################
+#################SCRIPTS #################
+########################################## -->
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
@@ -277,6 +322,10 @@
 <!-- ######################TWITTER FOLLOW################### -->
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     <script src="js/randomiser.js" ></script>
+
+    <!-- ##########################################
+################# END  SCRIPTS #################
+########################################## -->
   </body>
 
 
