--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -222,6 +222,43 @@
         <img class="img-circle" src="img/contact/mail.png" alt="email icon">
         <p>We are always happy to answer your questions or reading your feedback to help us make a better game experience.</p>
         <p>hello@connecti-cards.com</p>
+        
+<!-- POPUP TEST -->
+
+<!-- Small modal  -->
+        <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm" id="contact-popup1">POPUP TIME!</button>
+          <div class="modal fade bs-example-modal-sm" id="modal-1" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+              <div class="modal-content">
+                <button type="button" id="close-popup" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <img src="img/about/jkwink.png" id="about-img" alt="game_icon">
+                <div class="modal-header">
+                  <h1>Popup Time!</h1>
+                </div><!-- closing modal header -->
+                <div class="modal-body">
+                  <p>This is my first pop up test with a lot of blah blah to pretend that I have something very interesting to say!</p>
+                </div><!-- closing modal body --> 
+              </div> <!-- closing popup -->
+            </div>
+          </div>
+
+        <!--   end small modal -->
+        <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg" id="contact-popup2">POPUP EMBEDED!</button>
+          <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"  aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <button type="button" id="close-popup-lg" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <embed id="embeded-pdf" src="http://www.europarl.europa.eu/pdfs/news/expert/infopress/20170329IPR69067/20170329IPR69067_en.pdf">
+                </div><!-- closing modal body --> 
+              </div> <!-- closing popup -->
+            </div>
+          </div>
+          <!-- END POPUP TEST -->
+<!-- 
+          large modal test with embeded -->
+          <!-- END POPUP TEST -->
+
       </div><!-- closing col   -->
 
 <!--  ####END CONTACT INFO ##### -->
@@ -293,7 +330,7 @@
 <script src="js/scripts.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!-- Bootstrap core JS  added under jquery to make sure the cascade reading happens in the right order-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
 <!-- ######################FB BUTTON################### -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
