added stellar plugin
- Added stellar for future usage of parallax BUT currently not applied
to any items since doesn’t fit the design.

--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -331,6 +331,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!-- Bootstrap core JS  added under jquery to make sure the cascade reading happens in the right order-->
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
+<!-- STELLAR -->
+  <script src="js/jquery.stellar.min.js"></script>
+
 <!-- ######################FB BUTTON################### -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
