--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -190,7 +190,7 @@
     </div><!--  closing col 12 -->
     <div class="col-xs-3 hidden-sm hidden-md hidden-lg"">
       <img src="img/about/jkwink.png" id="jk-img" alt="game_icon">
-      <button class="btn-primary" id="jk-btn" onclick="newQuote()"> New Quote </button>
+      <button type="button" class="btn btn-primary" id="jk-btn" onclick="newQuote()"> New Quote </button>
     </div><!--  closing col 4 for title -->
     <div class="col-xs-8 hidden-sm hidden-md hidden-lg"">
     <div class="bubble" id="quoteDisplay">
