--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -284,16 +284,18 @@
       </form> <!-- closing form -->
 
     <!--   ########## Message sent confirmation popup ######## -->
+  <!--   ###I USE THIS POPUP TO FEEDBACK USER ON THEIR ACTIONS## -->
+      <!--   ############################################### -->
       <div class="modal fade bs-example-modal-sm" id="popup-msg-sent" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-sm">
               <div class="modal-content">
                 <button type="button" id="close-popup" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <img src="img/about/jkwink.png" id="about-img" alt="game_icon">
                 <div class="modal-header">
-                  <h1>Sent!</h1>
+                  <h1></h1>
                 </div><!-- closing modal header -->
                 <div class="modal-body">
-                  <p>Thanks for contacting us!<br/> We'll get back to you as soon as possible!</p>
+                  <p></p>
                 </div><!-- closing modal body --> 
               </div> <!-- closing popup -->
             </div>
