--- a/responsive_website/index.html
+++ b/responsive_website/index.html
@@ -279,7 +279,17 @@
         <textarea style="resize:none" id="message-box" cols="40" rows="5" placeholder="Drop us a line!" class="message-box form-control"></textarea>
         <p id="visible-comment"></p>
         </div>
-        <p id="contact-footnote">(*) Required attributes</p>
+        <div class="row">
+          <div class="col-xs-8">
+            <p id="contact-footnote">(*) Required attributes</p>
+          </div>
+          <div class="col-xs-2">
+            <p>Char.</p>
+          </div>
+          <div class="col-xs-2">
+            <p id="char-count"></p>
+          </div>
+        </div>
         <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Missing backend" id="submit-tool">Submit</button>
       </form> <!-- closing form -->
 
